--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -50,7 +50,9 @@
     <string name="device_name">%1$s (%2$s)</string>
     <string name="device_connect_description">Press to connect to the device</string>
     <string name="connected_station">Connected station</string>
-    <string name="response_time">Response time: %1$dms</string>
+    <string name="station_firmware">Firmware version %1$d</string>
+    <string name="station_voltage">Battery voltage %1$d, temperature %2$d°C</string>
+    <string name="response_time">Response time %1$dms</string>
     <string name="station_mode">Current mode</string>
     <string name="station_mode_value_0">Initialization at #%1$s</string>
     <string name="station_mode_value_1">Ordinary point #%1$s</string>
