--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -54,9 +54,9 @@
     <string name="station_voltage">Battery voltage %1$d, temperature %2$d°C</string>
     <string name="response_time">Response time %1$dms</string>
     <string name="station_mode">Current mode</string>
-    <string name="station_mode_value_0">Initialization at #%1$s</string>
-    <string name="station_mode_value_1">Ordinary point #%1$s</string>
-    <string name="station_mode_value_2">Finish point #%1$s</string>
+    <string name="station_mode_value_0">Initialization at %1$s</string>
+    <string name="station_mode_value_1">Ordinary point %1$s</string>
+    <string name="station_mode_value_2">Finish point %1$s</string>
     <string name="station_mode_unknown">Unknown mode</string>
     <string name="station_new_point">New point</string>
     <string name="station_new_mode">New mode</string>
