--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -19,6 +19,7 @@
     <string name="mode_active_point">На активной точке</string>
     <string name="mode_active_point_name">На активной точке %1$s</string>
     <string name="mode_team_list">Просмотр результатов</string>
+    <string name="mode_chip_info">Информация о чипе</string>
 
     <string name="start_page_text">Здесь будет описание работы с приложением</string>
 
@@ -85,6 +86,8 @@
     <string name="team_maps_count">Карт: %1$d</string>
     <string name="team_members_count">Участников: %1$d (%2$s)</string>
     <string name="init_team_chip">Записать чип</string>
+
+    <string name="chip_info_request">Запрос информации о чипе</string>
 
     <string name="ap_total_teams">Команд: %1$d</string>
     <string name="ap_team_name">№%1$d %2$s</string>
