--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="mode_active_point">Active point</string>
     <string name="mode_active_point_name">Active point %1$s</string>
     <string name="mode_team_list">Browse team results</string>
+    <string name="mode_chip_info">Chip info</string>
 
     <string name="start_page_text">Description of work with the App</string>
 
@@ -86,6 +87,8 @@
     <string name="team_maps_count">Maps: %1$d</string>
     <string name="team_members_count">Members: %1$d (%2$s)</string>
     <string name="init_team_chip">Init chip</string>
+
+    <string name="chip_info_request">Read chip info</string>
 
     <string name="ap_total_teams">Teams: %1$d</string>
     <string name="ap_team_name">№%1$d %2$s</string>
