--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="device_connect_description">Press to connect to the device</string>
     <string name="connected_station">Connected station</string>
     <string name="station_firmware">Firmware version %1$d</string>
-    <string name="station_voltage">Battery voltage %1$d, temperature %2$d°C</string>
+    <string name="station_voltage">Battery voltage %1$.2fV, temperature %2$d°C</string>
     <string name="response_time">Response time %1$dms</string>
     <string name="station_mode">Current mode</string>
     <string name="station_mode_value_0">Initialization at %1$s</string>
@@ -69,6 +69,10 @@
     <string name="station_sync_time">Synchronize</string>
     <string name="station_chips_registered">Chips registered</string>
     <string name="station_last_chip">Last chip at</string>
+    <plurals name="station_reset_time">
+        <item quantity="one">%1$d second to complete</item>
+        <item quantity="other">%1$d seconds to complete</item>
+    </plurals>
 
     <string name="team_number_title">Team number</string>
     <string name="key_1">1</string>
