--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -89,14 +89,14 @@
     <string name="key_clear">\u00d7</string>
     <string name="team_number">-</string>
     <string name="team_maps_count">Maps: %1$d</string>
-    <string name="team_members_count">Members: %1$d (%2$s)</string>
+    <string name="team_members_count">Members: %1$d</string>
     <string name="init_team_chip">Init chip</string>
 
     <string name="ap_total_teams">Teams: %1$d</string>
     <string name="ap_team_name">№%1$d %2$s</string>
     <string name="ap_visited">Visited: %1$s</string>
     <string name="ap_skipped">Skipped: %1$s</string>
-    <string name="ap_members_count">Members: %1$d</string>
+    <string name="ap_save_mask">Register dismissal</string>
     <string name="list_team_count">%1$d</string>
     <string name="list_team_time">%1$s</string>
 
