--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -16,8 +16,8 @@
     <string name="mode_bluetooth_set">Настроить станцию %1$s</string>
     <string name="mode_chip_init">Инициализация чипов</string>
     <string name="mode_chip_init_name">Инициализация чипов на %1$s</string>
-    <string name="mode_active_point">На активной точке</string>
-    <string name="mode_active_point_name">На активной точке %1$s</string>
+    <string name="mode_control_point">На активной точке</string>
+    <string name="mode_control_point_name">На активной точке %1$s</string>
     <string name="mode_team_list">Просмотр результатов</string>
     <string name="mode_chip_info">Информация о чипе</string>
 
@@ -44,7 +44,7 @@
         на сайт)</string>
     <string name="site_name_test">тестового</string>
     <string name="site_name_main">основного</string>
-    <string name="active_point_prefix">КП</string>
+    <string name="control_point_prefix">КП</string>
 
     <string name="device_search">Поиск станций</string>
     <string name="device_name">%1$s (%2$s)</string>
@@ -93,11 +93,11 @@
     <string name="init_team_chip">Записать чип</string>
     <string name="init_success">Чип инициализирован</string>
 
-    <string name="ap_total_teams">Команд: %1$d</string>
-    <string name="ap_team_name">№%1$d %2$s</string>
-    <string name="ap_visited">Взяты: %1$s</string>
-    <string name="ap_skipped">Пропущены: %1$s</string>
-    <string name="ap_save_mask">Зарегистрировать сход</string>
+    <string name="cp_total_teams">Команд: %1$d</string>
+    <string name="cp_team_name">№%1$d %2$s</string>
+    <string name="cp_punched">Взяты: %1$s</string>
+    <string name="cp_skipped">Пропущены: %1$s</string>
+    <string name="cp_save_mask">Зарегистрировать сход</string>
     <string name="list_team_count">%1$d</string>
     <string name="list_team_time">%1$s</string>
 
