--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="email">EMail</string>
     <string name="password">Password</string>
     <string name="use_test_site">Use test site</string>
+    <string name="init_point_name">Initialization</string>
     <string name="download_distance_success">Distance was successfully downloaded</string>
     <string name="send_results_success">Chip data were successfully sent to site</string>
     <string name="send_results_failure">Local chips data has been changed, please, resend
