--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -111,6 +111,7 @@
 
     <string name="info_request">Считать чип</string>
     <string name="info_help">Чтобы посмотреть содержимое чипа, положите его на станцию и нажмите кнопку</string>
+    <string name="info_save_to_db">Сохранять данные из чипа в базу</string>
     <string name="info_team_name">№%1$d %2$s</string>
     <string name="list_point_name">%1$s</string>
     <string name="list_point_time">%1$s</string>
