--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -110,6 +110,7 @@
 
     <string name="info_request">Read chip data</string>
     <string name="info_help">Put a chip on the station and click the button to view chip content</string>
+    <string name="info_save_to_db">Save data from chip to database</string>
     <string name="info_team_name">№%1$d %2$s</string>
     <string name="list_point_name">%1$s</string>
     <string name="list_point_time">%1$s</string>
