--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -57,13 +57,13 @@
     <string name="response_time">Response time %1$dms</string>
     <string name="station_mode">Current mode</string>
     <string name="station_mode_value_0">Initialization at %1$s</string>
-    <string name="station_mode_value_1">Ordinary point %1$s</string>
+    <string name="station_mode_value_1">Start point %1$s</string>
     <string name="station_mode_value_2">Finish point %1$s</string>
     <string name="station_mode_unknown">Unknown mode</string>
     <string name="station_new_point">New point</string>
     <string name="station_new_mode">New mode</string>
     <string name="station_mode_0">Init</string>
-    <string name="station_mode_1">Ordinary</string>
+    <string name="station_mode_1">Start</string>
     <string name="station_mode_2">Finish</string>
     <string name="station_change_mode">Update</string>
     <string name="station_time_drift">Time drift: %1$ds</string>
