--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="navigation_header">Режим работы</string>
     <string name="acra_toast_text">Приложение завершилось из-за ошибки, детальный отчет
         будет отправлен на сайт mmb.progressor.ru</string>
+    <string name="app_name_version">%1$s %2$s</string>
 
     <string name="unknown">\?\?\?</string>
 
